--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <img src="image/p2.jpeg" alt="tanzim">
     <img src="image/p3.jpeg" alt="tanzim">
     <img src="image/p4s.jpeg" alt="tanzim">
+    <h1>lorem</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum nesciunt eius est nihil fuga necessitatibus nulla dolor voluptatibus accusamus natus enim, recusandae dolorem adipisci consectetur suscipit eligendi fugit! Harum molestias incidunt dolorum culpa nostrum earum ab labore aut aspernatur cum iusto fugit dignissimos tenetur, architecto dolores a unde! Quasi explicabo, asperiores dolorum placeat accusamus, voluptatem, exercitationem ex alias vel pariatur quo dolore nostrum ipsum excepturi quaerat nisi. Architecto vero iusto non, perferendis, natus nisi exercitationem maiores doloremque itaque neque illo, debitis iure praesentium inventore voluptate. Corrupti assumenda sequi voluptates explicabo eveniet laboriosam impedit. Minus quo repudiandae, inventore labore harum et!</p>
 </body>
 </html>
